--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "follow-redirects": ">=1.14.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
